src/test/custom/invalid/preCompileSyntaxErr/invalidMacro1.wacc
adefine abc efg

begin
  skip
end